--- a/index.html
+++ b/index.html
@@ -16,6 +16,30 @@
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
   <body>
+    <div class="navigation">
+      <input type="checkbox" class="navigation__checkbox" id="navi-toggle" />
+      <label for="navi-toggle" class="navigation__button">MENU</label>
+      <div class="navigation__background">&nbsp;</div>
+      <nav class="navigation__nav">
+        <ul class="navigation__list">
+          <li class="navigation__link">
+            <a href="#" class="navigation__link">About us</a>
+          </li>
+          <li class="navigation__link">
+            <a href="#" class="navigation__link">Your benifits</a>
+          </li>
+          <li class="navigation__link">
+            <a href="#" class="navigation__link">Populsr tours</a>
+          </li>
+          <li class="navigation__link">
+            <a href="#" class="navigation__link">Stories</a>
+          </li>
+          <li class="navigation__link">
+            <a href="#" class="navigation__link">Book now</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <header class="header">
       <div class="header__logo-box">
         <img
@@ -282,7 +306,108 @@
           <a href="#" class="btn-text">Read all stories &rarrap;</a>
         </div>
       </section>
+
+      <section class="section-book">
+        <div class="row">
+          <div class="book">
+            <div class="book__form">
+              <form action="#" class="form">
+                <div class="u-margin-bottom-medium">
+                  <h2 class="heading-secondary">Start booking now</h2>
+                </div>
+                <div class="form__group">
+                  <input
+                    id="name"
+                    type="text"
+                    class="form__input"
+                    placeholder="Full name"
+                    required
+                  />
+                  <label class="form__label" for="name">Full name</label>
+                </div>
+                <div class="form__group">
+                  <input
+                    id="email"
+                    type="text"
+                    class="form__input"
+                    placeholder="E-mail"
+                    required
+                  />
+                  <label class="form__label" for="email">E-mail</label>
+                </div>
+                <div class="form__group u-margin-bottom-medium">
+                  <div class="form__radio-group form__group">
+                    <input
+                      name="size"
+                      id="small"
+                      type="radio"
+                      class="form__radio-input"
+                    />
+                    <label class="form__radio-label" for="small">
+                      <span class="form__radio-button"></span>
+                      Small tour group</label
+                    >
+                  </div>
+                  <div class="form__radio-group">
+                    <input
+                      name="size"
+                      id="large"
+                      type="radio"
+                      class="form__radio-input"
+                    />
+
+                    <label class="form__radio-label" for="large"
+                      ><span class="form__radio-button"></span>Large tour
+                      group</label
+                    >
+                  </div>
+                </div>
+                <div class="form__group">
+                  <div type="submit" class="btn btn--green">Next step</div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="footer__logo-box">
+        <img src="./img/logo-green-2x.png" alt="logo" class="footer__logo" />
+      </div>
+      <div class="row">
+        <div class="col-1-of-2">
+          <div class="footer__navigation">
+            <ul class="footer_list">
+              <li class="footer__item">
+                <a href="#" class="footer__link">Company</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Contact us</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Carreas</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Privat policy</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Terms</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-1-of-2">
+          <p class="footer__copyright">
+            Built my <a href="" class="footer__link">@zart</a> for training.
+            Copyright &copy; by Zart. You are 100% allowed to use this webpage
+            for both personal and commercial use, bot NOT to claim it as tour
+            own desgne. A credit to the origiginal author, @zart, is highly
+            appreciated.
+          </p>
+        </div>
+      </div>
+    </footer>
 
     <!-- <section class="grid-test">
       <div class="row">
