--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
       <div class="navigation__background">&nbsp;</div>
       <nav class="navigation__nav">
         <ul class="navigation__list">
-          <li class="navigation__link">
-            <a href="#" class="navigation__link">About us</a>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"><span>1</span>About us</a>
           </li>
-          <li class="navigation__link">
-            <a href="#" class="navigation__link">Your benifits</a>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"><span>2</span>Your benifits</a>
           </li>
-          <li class="navigation__link">
-            <a href="#" class="navigation__link">Populsr tours</a>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"><span>3</span>Populsr tours</a>
           </li>
-          <li class="navigation__link">
-            <a href="#" class="navigation__link">Stories</a>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"><span>4</span>Stories</a>
           </li>
-          <li class="navigation__link">
-            <a href="#" class="navigation__link">Book now</a>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"><span>5</span>Book now</a>
           </li>
         </ul>
       </nav>
